--- a/client/package.json
+++ b/client/package.json
@@ -44,6 +44,8 @@
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^5.1.0",
     "@vitejs/plugin-react": "^1.0.0",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
+    "autoprefixer": "^10.4.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^27.2.4",
     "babel-plugin-module-resolver": "^4.1.0",
@@ -53,6 +55,8 @@
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-react": "^7.26.1",
     "jest": "^27.3.1",
+    "postcss": "^8.3.11",
+    "tailwindcss": "^2.2.19",
     "ts-jest": "^27.0.5",
     "typesafe-actions": "^5.1.0",
     "typescript": "^4.4.3",
