--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,9 @@
     "test": "npx jest --watch --detectOpenHandles --runInBand --forceExit --coverage"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "deepmerge": "^4.2.2",
+    "lodash": "^4.17.21",
     "luxon": "^2.1.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
