--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "serve": "vite preview",
-    "test": "npx jest --watch --detectOpenHandles --runInBand --forceExit --coverage"
+    "test": "npx jest --watch --detectOpenHandles --runInBand --forceExit --coverage",
+    "watch:css": "postcss src/styles/tailwind.css -o src/styles/output.css"
   },
   "dependencies": {
     "axios": "^0.24.0",
@@ -14,7 +15,8 @@
     "luxon": "^2.1.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "react-redux": "^7.2.5"
+    "react-redux": "^7.2.5",
+    "react-router-dom": "^6.0.2"
   },
   "babel": {
     "env": {
@@ -58,6 +60,7 @@
     "eslint-plugin-react": "^7.26.1",
     "jest": "^27.3.1",
     "postcss": "^8.3.11",
+    "postcss-cli": "^9.0.2",
     "tailwindcss": "^2.2.19",
     "ts-jest": "^27.0.5",
     "typesafe-actions": "^5.1.0",
