--- a/client/package.json
+++ b/client/package.json
@@ -59,8 +59,12 @@
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-react": "^7.26.1",
     "jest": "^27.3.1",
+    "node-sass": "^6.0.1",
     "postcss": "^8.3.11",
+    "postcss-import": "^14.0.2",
     "postcss-cli": "^9.0.2",
+    "postcss-preset-env": "^6.7.0",
+    "rollup-plugin-scss": "^3.0.0",
     "tailwindcss": "^2.2.19",
     "ts-jest": "^27.0.5",
     "typesafe-actions": "^5.1.0",
