Get calendar widget wired up

--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
     "build": "tsc && vite build",
     "serve": "vite preview",
     "test": "npx jest --watch --detectOpenHandles --runInBand --forceExit --coverage",
-    "watch:css": "postcss src/styles/tailwind.css -o src/styles/output.css"
+    "watch:css": "npx postcss src/styles/tailwind.css -o src/styles/output.css"
   },
   "dependencies": {
     "axios": "^0.24.0",
@@ -61,14 +61,15 @@
     "jest": "^27.3.1",
     "node-sass": "^6.0.1",
     "postcss": "^8.3.11",
-    "postcss-import": "^14.0.2",
     "postcss-cli": "^9.0.2",
+    "postcss-import": "^14.0.2",
     "postcss-preset-env": "^6.7.0",
     "rollup-plugin-scss": "^3.0.0",
     "tailwindcss": "^2.2.19",
     "ts-jest": "^27.0.5",
     "typesafe-actions": "^5.1.0",
     "typescript": "^4.4.3",
-    "vite": "^2.6.0"
+    "vite": "^2.6.0",
+    "vite-plugin-react-svg": "^0.2.0"
   }
 }
