--- a/client/package.json
+++ b/client/package.json
@@ -65,6 +65,7 @@
     "postcss-import": "^14.0.2",
     "postcss-preset-env": "^6.7.0",
     "rollup-plugin-scss": "^3.0.0",
+    "sass": "^1.43.4",
     "tailwindcss": "^2.2.19",
     "ts-jest": "^27.0.5",
     "typesafe-actions": "^5.1.0",
