--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,8 @@
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-redux": "^7.2.5",
-    "react-router-dom": "^6.0.2"
+    "react-router-dom": "5.3.0",
+    "react-router-last-location": "^2.0.1"
   },
   "babel": {
     "env": {
