--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "serve": "vite preview",
     "test": "npx jest --watch --detectOpenHandles --runInBand --forceExit --coverage",
     "watch:css": "npx postcss src/styles/tailwind.css -o src/styles/output.css"
@@ -18,6 +18,7 @@
     "d3-svg-legend": "^2.25.6",
     "d3-zoom": "^3.0.0",
     "deepmerge": "^4.2.2",
+    "express": "^4.17.1",
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.21",
     "luxon": "^2.1.1",
