--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
         id: docker_build_front
         uses: docker/build-push-action@v2
         with:
-          context: /client/src
+          context: ./client/src
           file: ./Dockerfile
           push: true
           tags: nickstebb/hht-frontend:latest
