--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,9 +36,9 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: ./client/src
-          file: ./Dockerfile
+          file: ../Dockerfile
           push: true
-          tags: nickstebb/hht-frontend:latest
+          tags: nickstebb/hht-frontend-redux:latest
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
