--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: ./client
-          file: Dockerfile
+          file: ./client/Dockerfile
           push: true
           tags: nickstebb/hht-frontend-redux:latest
 
