Update dockerfile commands

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,8 +1,8 @@
 FROM node:lts-alpine
 WORKDIR /usr/src/app
 COPY package.json ./
-RUN apk add --update nodejs-current nodejs-npm
+RUN apk add --update nodejs nodejs-npm
 RUN npm install
-COPY ../.. .
+COPY . .
 CMD ["NODE_ENV=production", "npm", "run", "build"]
 CMD ["node", "server.js"]
