--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:lts-alpine
 WORKDIR /usr/src/app
 COPY package.json ./
-RUN apk add --update nodejs nodejs-npm
+RUN apk add --update nodejs npm
 RUN npm install
 COPY . .
 CMD ["NODE_ENV=production", "npm", "run", "build"]
