--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -2,7 +2,7 @@ FROM node:lts-alpine
 WORKDIR /usr/src/app
 COPY package.json ./
 RUN apk add --update nodejs npm
-RUN npm install
+RUN npm install --legacy-peer-deps
 COPY . .
 CMD ["NODE_ENV=production", "npm", "run", "build"]
 CMD ["node", "server.js"]
