--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.21",
     "luxon": "^2.1.1",
+    "memoizee": "^0.4.15",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-redux": "^7.2.5",
