--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@egjs/hammerjs": "^2.0.17",
     "axios": "^0.24.0",
     "d3": "^7.1.1",
+    "d3-svg-legend": "^2.25.6",
     "deepmerge": "^4.2.2",
     "express": "^4.17.1",
     "hammerjs": "^2.0.8",
