--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -5,4 +5,6 @@ RUN apk add --update nodejs npm
 RUN npm install --legacy-peer-deps  
 COPY . .
 CMD ["NODE_ENV=production", "npm", "run", "build"]
+CMD ["apk", "update"]
+CMD ["apk", "add", "nano"]
 CMD ["node", "server.js"]
